<resources>
    <string name="app_name">LeagueOfLegendsQuizApp</string>
    <string name="appTitle">League of Legends:</string>
    <string name="appSubtitle"> The Lore</string>
    <string name="story">Do you know your legends?</string>
    <string name="lolCover">League of Legends Cover</string>
    <string name="firstQuestion">1) Azir\'s bestfriend who turned enemy was? </string>
    <string name="q1a">Xerath</string>
    <string name="q1b">Ahri</string>
    <string name="q1c">Graves</string>
    <string name="q1d">Master Yi</string>
    <string name="secondQuestion">2) Why does Xayah fight with Rakan? </string>
    <string name="q2a">For money</string>
    <string name="q2b">For revenge</string>
    <string name="q2c">For her people</string>
    <string name="q2d">For her dying sister</string>
    <string name="thirdQuestion">3) Who is Jinx\'s lawful Rival?</string>
    <string name="thirdHint">Character Name</string>
    <string name="fourthQuestion">4) Who was the esteemed mechanic that Rumble despised for being a sellout?</string>
    <string name="q4a">Warwick</string>
    <string name="q4b">Teemo</string>
    <string name="q4c">Jayce</string>
    <string name="q4d">Heimerdinger</string>
    <string name="fifthQuestion">5) Demacia\'s war enemy in the lore is? </string>
    <string name="q5a">Noxus</string>
    <string name="q5b">Piltover</string>
    <string name="q5c">Bilgewater</string>
    <string name="q5d">Ionia</string>
    <string name="sixthQuestion">6) Some of the yordles known are: [Check one or more options]</string>
    <string name="q6a">Lulu</string>
    <string name="q6b">Garen</string>
    <string name="q6c">Gnar</string>
    <string name="q6d">Corki</string>
    <string name="q6e">Annie</string>
    <string name="totalscore">Total Score: 0</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="shurima">Shurima</string>
    <string name="xayahAndRakan">Xayah and Rakan</string>
    <string name="jinx">Jinx</string>
    <string name="demacia">Demacia</string>
    <string name="rumble">Rumble</string>
    <string name="yordles">Yordles</string>
</resources>
